--- a/Admin/View/left.html
+++ b/Admin/View/left.html
@@ -39,8 +39,9 @@ $(function(){
     <span><img src="<?php echo __PUBLIC__;?>/images/leftico01.png" /></span>管理信息
     </div>
     	<ul class="menuson">
-        <li><cite></cite><a href="/Admin/index.php?c=Index&f=show&p=main" target="rightFrame">首页模版</a><i></i></li>
-        <li class="active"><cite></cite><a href="/Admin/index.php?c=Index&f=show&p=right" target="rightFrame">数据列表</a><i></i></li>
+        <li class="active"><cite></cite><a href="/Admin/index.php?c=Index&f=show&p=main" target="rightFrame">首页模版</a><i></i></li>
+        <li><cite></cite><a href="/Admin/index.php?c=Index&f=show&p=right" target="rightFrame">单级菜单管理</a><i></i></li>
+        <li><cite></cite><a href="/Admin/index.php?c=Index&f=show&p=right" target="rightFrame">数据列表</a><i></i></li>
         <li><cite></cite><a href="imgtable.html" target="rightFrame">图片数据表</a><i></i></li>
         <li><cite></cite><a href="form.html" target="rightFrame">添加编辑</a><i></i></li>
         <li><cite></cite><a href="imglist.html" target="rightFrame">图片列表</a><i></i></li>
