--- a/Admin/View/login.html
+++ b/Admin/View/login.html
@@ -42,14 +42,15 @@
     <span class="systemlogo"></span> 
        
     <div class="loginbox">
-    
-    <ul>
-    <li><input name="" type="text" class="loginuser" value="admin" onclick="JavaScript:this.value=''"/></li>
-    <li><input name="" type="text" class="loginpwd" value="密码" onclick="JavaScript:this.value=''"/></li>
-    <li><input name="" type="button" class="loginbtn" value="登录"  onclick="javascript:window.location='main.html'"  /><label><input name="" type="checkbox" value="" checked="checked" />记住密码</label><label><a href="#">忘记密码？</a></label></li>
-    </ul>
-    
-    
+    <form action="<?php echo '/Admin/index.php?c=Login';?>" method="post">
+        <ul>
+        <li><input name="username" type="text" class="loginuser" onclick="JavaScript:this.value=''"/></li>
+        <li><input name="password" type="password" class="loginpwd" onclick="JavaScript:this.value=''"/></li>
+        <img src="../Common/Verify.php" >
+        <li><input name="veify" type="password" class="loginuser" onclick="JavaScript:this.value=''"/></li>
+        <li><input type="submit" name="submit" class="loginbtn" value="登录" /><label><input name="" type="checkbox" value="" checked="checked" />记住密码</label><label><a href="#">忘记密码？</a></label></li>
+        </ul> 
+    </form>
     </div>
     
     </div>
