--- a/Admin/View/right.html
+++ b/Admin/View/right.html
@@ -3,8 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
-<link href="css/style.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="js/jquery.js"></script>
+<link href="<?php echo __PUBLIC__;?>/css/style.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="<?php echo __PUBLIC__;?>/js/jquery.js"></script>
 
 <script type="text/javascript">
 $(document).ready(function(){
@@ -47,15 +47,15 @@ $(document).ready(function(){
     <div class="tools">
     
     	<ul class="toolbar">
-        <li class="click"><span><img src="images/t01.png" /></span>添加</li>
-        <li class="click"><span><img src="images/t02.png" /></span>修改</li>
-        <li><span><img src="images/t03.png" /></span>删除</li>
-        <li><span><img src="images/t04.png" /></span>统计</li>
+        <li class="click"><span><img src="<?php echo __PUBLIC__;?>/images/t01.png" /></span>添加</li>
+        <li class="click"><span><img src="<?php echo __PUBLIC__;?>/images/t02.png" /></span>修改</li>
+        <li><span><img src="<?php echo __PUBLIC__;?>/images/t03.png" /></span>删除</li>
+        <li><span><img src="<?php echo __PUBLIC__;?>/images/t04.png" /></span>统计</li>
         </ul>
         
         
         <ul class="toolbar1">
-        <li><span><img src="images/t05.png" /></span>设置</li>
+        <li><span><img src="<?php echo __PUBLIC__;?>/images/t05.png" /></span>设置</li>
         </ul>
     
     </div>
@@ -65,7 +65,7 @@ $(document).ready(function(){
     	<thead>
     	<tr>
         <th><input name="" type="checkbox" value="" checked="checked"/></th>
-        <th>编号<i class="sort"><img src="images/px.gif" /></i></th>
+        <th>编号<i class="sort"><img src="<?php echo __PUBLIC__;?>/images/px.gif" /></i></th>
         <th>标题</th>
         <th>用户</th>
         <th>籍贯</th>
@@ -197,7 +197,7 @@ $(document).ready(function(){
     	<div class="tiptop"><span>提示信息</span><a></a></div>
         
       <div class="tipinfo">
-        <span><img src="images/ticon.png" /></span>
+        <span><img src="<?php echo __PUBLIC__;?>/images/ticon.png" /></span>
         <div class="tipright">
         <p>是否确认对信息的修改 ？</p>
         <cite>如果是请点击确定按钮 ，否则请点取消。</cite>
