--- a/Home/View/index.html
+++ b/Home/View/index.html
@@ -19,7 +19,7 @@
     <h1>如影随形</h1>
     <h2>影子是一个会撒谎的精灵，它在虚空中流浪和等待被发现之间;在存在与不存在之间....</h2>
     <div class="logo"><a href="/"></a></div>
-    <nav id="topnav"><a href="#">首页</a><a href="<?php echo __Controller__;?>/AboutController.class.php">关于我</a><a href="<?php echo __Controller__;?>/newlist.html">慢生活</a><a href="<?php echo __Controller__;?>/share.html">模板分享</a><a href="<?php echo __Controller__;?>/new.html">模板主题</a></nav>
+    <nav id="topnav"><a href="/Home/index.php?c=Index&f=show&p=index">首页</a><a href="/Home/index.php?c=Index&f=show&p=about">关于我</a><a href="/Home/index.php?c=Index&f=show&p=newlist">慢生活</a><a href="/Home/index.php?c=Index&f=show&p=share">模板分享</a><a href="/Home/index.php?c=Index&f=show&p=new">模板主题</a></nav>
   </header>
   <article>
     <div class="banner">
