--- a/Admin/View/login.html
+++ b/Admin/View/login.html
@@ -47,7 +47,7 @@
         <li><input name="username" type="text" class="loginuser" onclick="JavaScript:this.value=''"/></li>
         <li><input name="password" type="password" class="loginpwd" onclick="JavaScript:this.value=''"/></li>
         <img src="../Common/Verify.php" >
-        <li><input name="veify" type="password" class="loginuser" onclick="JavaScript:this.value=''"/></li>
+        <li><input name="verify" type="password" class="loginuser" onclick="JavaScript:this.value=''"/></li>
         <li><input type="submit" name="submit" class="loginbtn" value="登录" /><label><input name="" type="checkbox" value="" checked="checked" />记住密码</label><label><a href="#">忘记密码？</a></label></li>
         </ul> 
     </form>
