--- a/Admin/View/error.html
+++ b/Admin/View/error.html
@@ -3,8 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
-<link href="css/style.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="js/jquery.js"></script>
+<link href="<?php echo __PUBLIC__;?>/css/style.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="<?php echo __PUBLIC__;?>/js/jquery.js"></script>
 
 <script language="javascript">
 	$(function(){
@@ -31,7 +31,7 @@
     
     <div class="error">
     
-    <h2>非常遗憾，您访问的页面不存在！</h2>
+    <h2><?php echo $_GET['error']; ?></h2>
     <p>看到这个提示，就自认倒霉吧!</p>
     <div class="reindex"><a href="main.html" target="_parent">返回首页</a></div>
     
