--- a/Admin/View/top.html
+++ b/Admin/View/top.html
@@ -37,7 +37,7 @@ $(function(){
     <ul>
     <li><span><img src="<?php echo __PUBLIC__;?>/images/help.png" title="帮助"  class="helpimg"/></span><a href="#">帮助</a></li>
     <li><a href="#">关于</a></li>
-    <li><a href="login.html" target="_parent">退出</a></li>
+    <li><a href="/Admin/index.php?c=Index&f=logout" target="_parent">退出</a></li>
     </ul>
      
     <div class="user">
