com17-4-12 afternoon also1BigBug ArticleSourcePageCoding!

--- a/Admin/View/error.html
+++ b/Admin/View/error.html
@@ -36,9 +36,9 @@
     <div class="reindex">
     <?php 
         if(isset($_GET['from'])){
-            echo "<a href='/Admin/index.php?c=".$_GET['from']."&f=source' target='_parent'>";
+            echo "<a href='/Admin/index.php?c=".$_GET['from']."&f=source' >";
         }else{
-            echo "<a href='/Admin/index.php?c=Index&f=source' target='_parent'>";
+            echo "<a href='/Admin/index.php?c=Index&f=source' >";
         }
     ?>
     <!-- 哪来的跳转回哪里 -->
