--- a/Home/View/index.html
+++ b/Home/View/index.html
@@ -19,7 +19,7 @@
     <h1>如影随形</h1>
     <h2>影子是一个会撒谎的精灵，它在虚空中流浪和等待被发现之间;在存在与不存在之间....</h2>
     <div class="logo"><a href="/"></a></div>
-    <nav id="topnav"><a href="/Home/index.php?c=Index&f=show&p=index">首页</a><a href="/Home/index.php?c=Index&f=show&p=about">关于我</a><a href="/Home/index.php?c=Index&f=show&p=newlist">慢生活</a><a href="/Home/index.php?c=Index&f=show&p=share">模板分享</a><a href="/Home/index.php?c=Index&f=show&p=new">模板主题</a></nav>
+    <nav id="topnav"><a href="/Home/index.php?c=Index&f=show&p=index">首页</a><a href="/Home/index.php?c=Index&f=show&p=about">关于我</a><a href="/Home/index.php?c=Article&f=source">慢生活</a><a href="/Home/index.php?c=Index&f=show&p=share">模板分享</a><a href="/Home/index.php?c=Index&f=show&p=new">模板主题</a></nav>
   </header>
   <article>
     <div class="banner">
@@ -33,17 +33,26 @@
         <p><span>推荐</span>文章</p>
       </h2>
 
+      <?php
+        foreach($recommend as $k => $v){
+          //处理文章内容太长
+          $content = $this->dealwith_art($v['content'],100,'......');
+          echo "
+            <div class='blogs'>
+              <h3><a href='/'>".$v['title']."</a></h3>
+              <figure><img src='".__IMAGE__."/".$v['photourl']."/".$v['photoname']."' ></figure>
+              <ul>
+                <p>".$content."</p>
+                <a href='/Home/index.php?c=Article&f=show&id=".$v['id']."'  class='readmore'>阅读全文&gt;&gt;</a>
+                <!-- target='_blank' -->
+              </ul>
+              <p class='autor'><span>作者：杨青</span><span>分类：【<a href='/'>".$v['classify']."</a>】</span><span>浏览（<a href='/'>".$v['browse']."</a>）</span><!-- <span>评论（<a href='/'>30</a>）</span> --></p>
+              <div class='dateview'>".$v['time']."</div>
+            </div>
+          ";
+        }  
+      ?>
       
-      <div class="blogs">
-        <h3><a href="/">犯错了怎么办？</a></h3>
-        <figure><img src="<?php echo __PUBLIC__;?>/images//01.jpg" ></figure>
-        <ul>
-          <p>看到昔日好友发了一篇日志《咎由自取》他说他是一个悲观者，感觉社会抛弃了他，脾气、性格在6年的时间里变化很大，很难适应这个社会。人生其实就是不断犯错的过程，在这个过程中不断的犯错，不断的吸取教训，不断的成长。也许日子里的惊涛骇浪，不过是人生中的水花摇晃，别用显微镜放大你的悲伤。</p>
-          <a href="/" target="_blank" class="readmore">阅读全文&gt;&gt;</a>
-        </ul>
-        <p class="autor"><span>作者：杨青</span><span>分类：【<a href="/">日记</a>】</span><span>浏览（<a href="/">459</a>）</span><span>评论（<a href="/">30</a>）</span></p>
-        <div class="dateview">2014-04-08</div>
-      </div>
 
 
     </div>
