--- a/Home/View/newlist.html
+++ b/Home/View/newlist.html
@@ -24,89 +24,58 @@
   <article>
     <h2 class="about_h">您现在的位置是：<a href="/Home/index.php?c=Index&f=show&p=index">首页</a>><a href="1/">慢生活</a></h2>
     <div class="bloglist">
-      <div class="newblog">
-        <ul>
-          <h3><a href="/">个人博客从简不繁</a></h3>
-          <div class="autor"><span>作者：杨青</span><span>分类：[<a href="/">日记</a>]</span><span>浏览（<a href="/">459</a>）</span><span>评论（<a href="/">30</a>）</span></div>
-          <p>十一月中旬开始，排名突然下降了，网站“个人博客”关键词排名从第一页第二名滑落到100页以后了，个人博客这个关键词百度已经搜不到了，仅有google、搜狗... <a href="/" target="_blank" class="readmore">全文</a></p>
-        </ul>
-        <figure><img src="<?php echo __PUBLIC__;?>/images/001.jpg" ></figure>
-        <div class="dateview">2014-04-08</div>
-      </div>
-      <div class="newblog">
-        <ul>
-          <h3><a href="/">再看4年前某婚恋网站我的十条征婚条件</a></h3>
-          <div class="autor"><span>作者：杨青</span><span>分类：[<a href="/">日记</a>]</span><span>浏览（<a href="/">459</a>）</span><span>评论（<a href="/">30</a>）</span></div>
-          <p>意外的是这个当地的婚恋网站到目前还存在，更意外的是，我的个人帐号还保存在他们网站上。好奇心迫使我打开个人资料看看到底当年写了什么样的征婚条件。原来这些年这些标准一直都没有变过，因为习惯，所以喜欢！ <a href="/" target="_blank" class="readmore">全文</a></p>
-        </ul>
-        <figure><img src="<?php echo __PUBLIC__;?>/images/005.jpg" ></figure>
-        <div class="dateview">2014-04-08</div>
-      </div>
-      <div class="newblog">
-        <ul>
-          <h3><a href="/">程序员那些琐碎的负面情绪</a></h3>
-          <div class="autor"><span>作者：杨青</span><span>分类：[<a href="/">程序人生</a>]</span><span>浏览（<a href="/">459</a>）</span><span>评论（<a href="/">30</a>）</span></div>
-          <p>在客户眼里做个页面，很简单，实现一个功能也是很轻松的事儿。作为技术员，真的很无奈，如果真的那么简单的话，我们还用成天抱怨自己是码农吗？销售的角色其实也蛮重要的，网站的成否，都跟客户沟通离不开，没沟通好，做无用功的就是程序员了...<a href="/" target="_blank" class="readmore">全文</a></p>
-        </ul>
-        <figure><img src="<?php echo __PUBLIC__;?>/images/008.jpg" ></figure>
-        <div class="dateview">2014-04-08</div>
-      </div>
-      <div class="newblog">
-        <ul>
-          <h3><a href="/">简单手工纸玫瑰</a></h3>
-          <div class="autor"><span>作者：杨青</span><span>分类：[<a href="/">日记</a>]</span><span>浏览（<a href="/">459</a>）</span><span>评论（<a href="/">30</a>）</span></div>
-          <p>过年前后都是在无聊中，在网上学了4种玫瑰折法，整张折的玫瑰步骤很多，关键的一步对折经常容易把纸折坏，所以选择了最简单的折法，把纸张分解开，然后一张张的用双面胶粘上。效果还是不错吧！ <a href="/" target="_blank" class="readmore">全文</a></p>
-        </ul>
-        <figure><img src="<?php echo __PUBLIC__;?>/images/002.jpg" ></figure>
-        <div class="dateview">2014-04-08</div>
-      </div>
-      <div class="newblog">
-        <ul>
-          <h3><a href="/">某一人似曾相识、某一刻似曾经历</a></h3>
-          <div class="autor"><span>作者：杨青</span><span>分类：[<a href="/">经典语录</a>]</span><span>浏览（<a href="/">459</a>）</span><span>评论（<a href="/">30</a>）</span></div>
-          <p>有时候会有这样的错觉：“某一人似曾相识、某一刻似曾经历”，这样奇特的感受大概你也有过。心理学称之为“即视现象”，是记忆中太多杂乱信息制造出的一种潜意识矛盾冲突。 <a href="/" target="_blank" class="readmore">全文</a></p>
-        </ul>
-        <figure><img src="<?php echo __PUBLIC__;?>/images/003.jpg" ></figure>
-        <div class="dateview">2014-04-08</div>
-      </div>
-      <div class="newblog">
-        <ul>
-          <h3><a href="/">犯错了怎么办？</a></h3>
-          <div class="autor"><span>作者：杨青</span><span>分类：[<a href="/">日记</a>]</span><span>浏览（<a href="/">459</a>）</span><span>评论（<a href="/">30</a>）</span></div>
-          <p>看到昔日好友发了一篇日志《咎由自取》他说他是一个悲观者，感觉社会抛弃了他，脾气、性格在6年的时间里变化很大，很难适应这个社会。人生其实就是不断犯错的过程，在这个过程中不断的犯错，不断的吸取教训，不断的成长... <a href="/" target="_blank" class="readmore">全文</a></p>
-        </ul>
-        <figure><img src="<?php echo __PUBLIC__;?>/images/01.jpg" ></figure>
-        <div class="dateview">2014-04-08</div>
-      </div>
-      <div class="newblog">
-        <ul>
-          <h3><a href="/">两只蜗牛艰难又浪漫的一吻</a></h3>
-          <div class="autor"><span>作者：杨青</span><span>分类：[<a href="/">日记</a>]</span><span>浏览（<a href="/">459</a>）</span><span>评论（<a href="/">30</a>）</span></div>
-          <p>这是国外一摄影师拍摄到的，看到这一幕，还真有爱！关于两只蜗牛相遇，该这般解释：两个蜗牛相遇的时候，互相用触角接触，然后头和头相对，身体并连，彼此生殖腔的位置相接... <a href="/" target="_blank" class="readmore">全文</a></p>
-        </ul>
-        <figure><img src="<?php echo __PUBLIC__;?>/images/004.jpg" ></figure>
-        <div class="dateview">2014-04-08</div>
-      </div>
-      <div class="newblog">
-        <ul>
-          <h3><a href="/">抄袭门过后——丢掉心结，重拾自己</a></h3>
-          <div class="autor"><span>作者：杨青</span><span>分类：[<a href="/">日记</a>]</span><span>浏览（<a href="/">459</a>）</span><span>评论（<a href="/">30</a>）</span></div>
-          <p>那仅有的一次抄袭被识破后，虽然我后来不断的努力写好的文章，在教育报刊杂志投稿并发表，但总被盖上了可能是抄袭的帽子。我怨老师的毫不留情，更多的是怨自己至今还放不下。如果我本身作文水平就一般，不会经常被当范文...<a href="/" target="_blank" class="readmore">全文</a></p>
-        </ul>
-        <figure><img src="<?php echo __PUBLIC__;?>/images/006.jpg" ></figure>
-        <div class="dateview">2014-04-08</div>
-      </div>
-      <div class="newblog">
-        <ul>
-          <h3><a href="/">程序员应该如何高效的工作学习</a></h3>
-          <div class="autor"><span>作者：杨青</span><span>分类：[<a href="/">日记</a>]</span><span>浏览（<a href="/">459</a>）</span><span>评论（<a href="/">30</a>）</span></div>
-          <p>对于一个程序员来说，如果正在写代码，写得正high的时候，突然被叫去开会，或者是有客户来了，有了新的想法，要沟通，这时候不得不把写到一半的代码搁在那儿，等客户一走，会一开完，又得花很长的时候来缕清..<a href="/" target="_blank" class="readmore">全文</a></p>
-        </ul>
-        <figure><img src="<?php echo __PUBLIC__;?>/images/007.jpg" ></figure>
-        <div class="dateview">2014-04-08</div>
-      </div>
+    <?php
+      $i = 1;
+      foreach($article as $k => $v){
+        if($i>=$pageS && $i<=$pageE){
+          //处理文章内容太长
+          $content = $this->dealwith_art($v['content'],100,'......');
+          echo "
+            <div class='newblog'>
+              <ul>
+                <h3><a href='/Home/index.php?c=Article&f=show&id=".$v['id']."'>".$v['title']."</a></h3>
+                <div class='autor'><span>作者：杨青</span><span>分类：[<a href='/'>".$v['classify']."</a>]</span><span>浏览（<a href='/'>".$v['browse']."</a>）</span><!-- <span>评论（<a href='/'>30</a>）</span> --></div>
+                <p>".$content."<a href='/Home/index.php?c=Article&f=show&id=".$v['id']."' class='readmore'>全文</a></p>
+               <!-- target='_blank' -->
+              </ul>
+              <figure><img src='".__IMAGE__."/".$v['photourl']."/".$v['photoname']."' ></figure>
+              <div class='dateview'>".$v['time']."</div>
+            </div>
+          ";
+          $i++;     
+        }else{
+          $i++;
+        }
+      } 
+    ?>
+      
+
+
     </div>
-    <div class="page"><a title="Total record"><b>113</b></a><b>1</b><a href="/">2</a><a href="/">3</a><a href="/">4</a><a href="/">5</a><a href="/">&gt;</a><a href="/">&gt;&gt;</a></div>
+    <!-- js要处理由<a>变成<b>！！！ -->
+    <div class="page"><!-- <a title="Total record"> -->
+    <!-- </a> -->
+    <!-- <b>1</b> -->
+    <?php
+        if($page!=1){
+            echo "
+              <a href='/Home/index.php?c=Article&f=source&pid=1'><<</a>
+              <a href='/Home/index.php?c=Article&f=source&pid=".($page-1)."'><</a>
+            ";
+        }
+    
+      for($i=0;$i<$pageNum;$i++){
+        echo "<a href='/Home/index.php?c=Article&f=source&pid=".($i+1)."'>".($i+1)."</a>";
+      }
+
+      if($page==$pageNum){}else{
+          echo "
+            <a href='/Home/index.php?c=Article&f=source&pid=".($page+1)."'>&gt;</a>
+            <a href='/Home/index.php?c=Article&f=source&pid=".$pageNum."'>&gt;&gt;</a></div> 
+          ";
+      }
+    ?>
+    
   </article>
   <aside>
     <div class="rnav">
