--- a/Home/View/index.html
+++ b/Home/View/index.html
@@ -19,7 +19,9 @@
     <h1>如影随形</h1>
     <h2>影子是一个会撒谎的精灵，它在虚空中流浪和等待被发现之间;在存在与不存在之间....</h2>
     <div class="logo"><a href="/"></a></div>
-    <nav id="topnav"><a href="/Home/index.php?c=Index&f=show&p=index">首页</a><a href="/Home/index.php?c=Index&f=show&p=about">关于我</a><a href="/Home/index.php?c=Article&f=source">慢生活</a><a href="/Home/index.php?c=Index&f=show&p=share">模板分享</a><a href="/Home/index.php?c=Index&f=show&p=new">模板主题</a></nav>
+    <nav id="topnav"><a href="/Home/index.php?c=Index&f=show&p=index">首页</a><a href="/Home/index.php?c=Index&f=show&p=about">日记</a><a href="/Home/index.php?c=Article&f=source">经典语录</a><a href="/Home/index.php?c=Index&f=show&p=share">程序人生</a><a href="/Home/index.php?c=Index&f=show&p=new">个人博客模板</a><!-- <a href="">网站建设</a>
+    <a href="">心得笔记</a><a href="">css3</a> --></nav>
+
   </header>
   <article>
     <div class="banner">
@@ -64,11 +66,11 @@
       <p>于千万人之中，我遇见了我所遇见的人....</p>
     </div>
     <div class="about_c">
-      <p>网名：DanceSmile | 即步非烟</p>
-      <p>职业：Web前端设计师、网页设计 </p>
-      <p>籍贯：四川省—成都市</p>
-      <p>电话：13662012345</p>
-      <p>邮箱：dancesmiling@qq.com</p>
+      <p>网名：Mr.Elephpant | 修</p>
+      <p>职业：Php开发爱好者、在校大三学生 </p>
+      <p>籍贯：吉林省—白山市</p>
+      <p>电话：13944670612</p>
+      <p>邮箱：787956151@qq.com</p>
     </div>
     <div class="bdsharebuttonbox"><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a><a href="#" class="bds_more" data-cmd="more"></a></div>
     <div class="tj_news">
@@ -76,27 +78,25 @@
         <p class="tj_t1">最新文章</p>
       </h2>
       <ul>
-        <li><a href="/">犯错了怎么办？</a></li>
-        <li><a href="/">两只蜗牛艰难又浪漫的一吻</a></li>
-        <li><a href="/">春暖花开-走走停停-发现美</a></li>
-        <li><a href="/">琰智国际-Nativ for Life官方网站</a></li>
-        <li><a href="/">个人博客模板（2014草根寻梦）</a></li>
-        <li><a href="/">简单手工纸玫瑰</a></li>
-        <li><a href="/">响应式个人博客模板（蓝色清新）</a></li>
-        <li><a href="/">蓝色政府（卫生计划生育局）网站</a></li>
+        <?php
+          foreach($LatestArt as $k => $v){
+            echo "
+              <li><a href='/Home/index.php?c=Article&f=show&id=".$v['id']."'>".$v['title']."</a></li>
+            ";
+          }
+        ?>
       </ul>
       <h2>
         <p class="tj_t2">推荐文章</p>
       </h2>
       <ul>
-        <li><a href="/">犯错了怎么办？</a></li>
-        <li><a href="/">两只蜗牛艰难又浪漫的一吻</a></li>
-        <li><a href="/">春暖花开-走走停停-发现美</a></li>
-        <li><a href="/">琰智国际-Nativ for Life官方网站</a></li>
-        <li><a href="/">个人博客模板（2014草根寻梦）</a></li>
-        <li><a href="/">简单手工纸玫瑰</a></li>
-        <li><a href="/">响应式个人博客模板（蓝色清新）</a></li>
-        <li><a href="/">蓝色政府（卫生计划生育局）网站</a></li>
+        <?php
+          foreach($RecArt as $k => $v){
+            echo "
+              <li><a href='/Home/index.php?c=Article&f=show&id=".$v['id']."'>".$v['title']."</a></li>
+            ";
+          }
+        ?>
       </ul>
     </div>
     <div class="links">
@@ -104,8 +104,10 @@
         <p>友情链接</p>
       </h2>
       <ul>
-        <li><a href="/">杨青个人博客</a></li>
-        <li><a href="/">3DST技术社区</a></li>
+        <li><a href="#">前端制作者</a></li>
+        <li><a href="http://user.qzone.qq.com/787956151">修のQQ空间</a></li>
+        <li><a href="http://github.com/zxy787956151">修のGit社区</a></li>
+        <li><a href="http://git.oschina.net/zxy950502">修の开源中国</a></li>
       </ul>
     </div>
     <div class="copyright">
